@@ -15,15 +15,15 @@ not run its Makefile.PL or Build.PL.
 Hash: SHA512
 
 SHA1 f9e6b3455b9fdc96c4b906c8feee99e9747bb823 Build.PL
-SHA1 9b99e6c4ea29a305d42b57dd3be73f4583d375dd Changelog
+SHA1 fff1268dff2511f462b0c8ec5ed20ad693e18369 Changelog
 SHA1 28112c20326a1182c540ab237c74abed55147740 MANIFEST
-SHA1 0c58ac86b61d61422cb45ea9bf19673be7727bbe META.json
-SHA1 06bd8f311bb59f1d8d3d8bb8e5428dda2035bbc0 META.yml
+SHA1 45946926a1ea37101e0398958bfa53ff9171657e META.json
+SHA1 294e2fffcfa5500545878f8642b1dd20c21dacca META.yml
 SHA1 2e1294a78d89c05dd9034e3a617abec7a0edfc29 README
-SHA1 70f8d8c7fd79286cfe2c5dbace1eadc9bb38eaee bin/db-iris
-SHA1 7cac64d40685efa058583e79f5ad714f49e5704b lib/Travel/Status/DE/IRIS.pm
-SHA1 734496ee36fc59c592d5e482d0437760f7f11d7d lib/Travel/Status/DE/IRIS/Result.pm
-SHA1 a1888c53d51f1c8ccd7d2396d1b043e138e9a4ee lib/Travel/Status/DE/IRIS/Stations.pm
+SHA1 dcc0607068da1616d6f642c59063ca96fbf1dc7e bin/db-iris
+SHA1 f54a8c631dab7f1fa0d1e70f0a50f0d2e97ac8ae lib/Travel/Status/DE/IRIS.pm
+SHA1 5f28c8c60116c43ae920209364104a307c46c1ef lib/Travel/Status/DE/IRIS/Result.pm
+SHA1 a73ffe85e2ad5fd149ed44a0730adc5779835ce2 lib/Travel/Status/DE/IRIS/Stations.pm
 SHA1 b5551b04e8bb5d033e6baea76cd5444d9fe7b1e7 scripts/acronyms.pl
 SHA1 536f10c8cf46a751727751db6aae68d9da21120d scripts/acronyms.sh
 SHA1 65c7499f6edef8101392c6e12dfd53333b54ace6 scripts/debug
@@ -34,7 +34,7 @@ SHA1 bb2c2942c1b2f0a53b2f760fb02cc2b1ece5aa16 t/20-iris-class.t
 SHA1 40cff21fd6ce42b8f48d0669518b8a983192d83d t/21-iris-stations.t
 SHA1 8e822c0970f1c24a4c97909f85dd7ef2195f4b35 t/30-iris-const.t
 SHA1 5a137895b613b357cf28a0b995655b788317ccc1 t/31-result-basics.t
-SHA1 d5d60687ac5b56ab3b77c94122220b00904f2c94 t/32-result-messages.t
+SHA1 a12c1c622437892812c7f1007d190896ab40cacb t/32-result-messages.t
 SHA1 1db22f443196dfeac3f19b379c7f2d8259bcb7ff t/33_result-route.t
 SHA1 3344c7135d43951efafe877140f3944cb5e1c4b3 t/in/fchg/8000098
 SHA1 62efc9065bec6e0fb9ad0d8d8479c6c97717b4f4 t/in/plan/8000098/140103/20
@@ -46,17 +46,17 @@ SHA1 e2a5e36447b697146055ed814c024185a98cfa6b t/in/station/EE
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQIcBAEBCgAGBQJS4k9qAAoJEBANW/tRZuAFIKEP/2McGZLf5Ey8rlm3Udrbz1Fl
-SnviCNYIIzqsa0tpdorpe0RYl5/Wokd0+LKbvxuupn1m3UjGB9xt/W2VWjar/AlC
-+c8ESvLyWvF3zsIPmuM3mPDtzqsJQH1hG+y6nXoN0gUVtZWYobdKhUJeewgTYdH9
-Lwx0xJPjxI+lWYChAr1aHb+ZsbNEDsvrvIBK07HZ9dzYx8EWRPcIXfPwwjfx/W/5
-fK4c9m0Xladeh3B98VtsoVl0nJ78TOPnqPFZ7Rc9z24c7r+hiy7qxdIM39zopQG9
-7K7bzDJ7Gs0D8zO+LbrRVpiHQgUqGnfjkpJ3P/W9LJGW6NKw5l+9Pmz2tgxwQHIO
-RU3t17HP0iU9RzOY8vZGW6zYE8ilSZKV1htg7LARuVn2Qr3L0tF4w6v+Kj3zSMQD
-m/nZgM2TvmFIG5K9pJkUQ88GaTv3y6GjIgrPd7vvzcuoLGGo64XzT5PWa70yvMc+
-wWuE4MAGyRa/XC+TiAfRiyP79E4JIkIRMryO+erZJ+a0hKZN3UC7nHE42sdimpvn
-4WuN5hOju1xFw50hkf98z2PohBwosB/BCc5y4AFruUYIPjiUX2rP+NYFAWx3uJ6g
-6PbTnwyFKsv7x/n8IAX1gxlSA0lyBF7Q8cWjh2Hbz1K8+Uur3D3D4RDNu4j6FpVP
-qgwvlTD63KU7jQL/hs5F
-=erho
+iQIcBAEBCgAGBQJS75D+AAoJEBANW/tRZuAFrLcQAM9JLiOtC+OQE+1skFiWNCVL
+n6dfeUPMSwIuc0dpfDymEn5mwit1ZiCG1PWDu1bnTa4lcQsUu3EKL9i/+hXogVoa
+eBiky6eA9Segy/D2NnwjLz7G3zqYhPw3YdRDw9K/DxRZsxEN5vwESqEcf7Q8RKfZ
+IKRncS/Ip/h7UTRsGq9tnua+gQa9Y9tsNgS6p2IXmKy7s636Y2JONz/S7SpZAR03
+uDB9P2iyWrjBbLVl6aum2a+HDphSOnNmhIs9tc1Ht9PZCSMuYaytmdhwv2SlfHNM
+pmGTXuXRxtajdT34LzPxArtbVn09ne18neHpqwFB+dtjwr+SEiM2XJxAdSscktxg
+aIi2h7fryyOwwUtXeXDG7VjbjbZc3ea3XXhewu/bYZIa0OXSS6t9SceUTaYSuYPj
+FnyIZ7YVv/8342VE3LffIFJCU4ZIsqkFpT7Gswe+6eCYXRySXCdslR9xPM6ramXI
+x2tKUSQsKdpR49utt7E0SEKNjc8zYUQdq5Gbc7up0zkUDK5mDXJANWPT3EuXtM5j
+gstgM/g1bdxm4IcqnlYFwh6S6U6fvAPaji1O8Bs0i8dlOnUNlhnYgUgWVdJ8b2j7
+J5HTK+SCWzSekIUZXW3v05b09ba6rI8ljjXPbgCpedWoMotao8rBoszHhAe+YqDc
+WIc5/QiyntnQMm+ikkvh
+=MZzo
 -----END PGP SIGNATURE-----
