@@ -6,7 +6,7 @@ use utf8;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '0.01';
+our $VERSION = '0.02';
 
 use DateTime;
 use DateTime::Format::Strptime;
@@ -19,9 +19,10 @@ use Travel::Status::DE::IRIS::Stations;
 
 my ( $date, $time );
 my $datetime = DateTime->now( time_zone => 'Europe/Berlin' );
-my $filter_via;
+my $realtime = 0;
+my ( $filter_via, $track_via, $status_via );
 my ( @grep_class, @grep_type, @grep_platform );
-my ( %edata, @edata_pre );
+my ( %edata,      @edata_pre );
 
 my @output;
 
@@ -35,10 +36,12 @@ GetOptions(
 	'h|help'        => sub { show_help(0) },
 	'o|output=s@'   => \@edata_pre,
 	'p|platform=s@' => \@grep_platform,
+	'r|realtime'    => \$realtime,
 	't|time=s'      => \$time,
 	'T|type=s'      => \@grep_type,
 	'v|via=s'       => \$filter_via,
-	'V|version'     => \&show_version,
+	'V|track-via=s' => \$track_via,
+	'version'       => \&show_version,
 
 ) or show_help(1);
 
@@ -54,6 +57,10 @@ if ( @ARGV != 1 ) {
 
 my ($station) = @ARGV;
 $station = get_station($station);
+
+if ($track_via) {
+	$track_via = get_station($track_via);
+}
 
 if ($date) {
 	my ( $day, $month, $year ) = split( qr{ [.] }ox, $date );
@@ -89,6 +96,34 @@ my $status = Travel::Status::DE::IRIS->new(
 	datetime => $datetime,
 	station  => $station,
 );
+if ($track_via) {
+	$status_via = Travel::Status::DE::IRIS->new(
+		datetime => $datetime,
+		station  => $track_via,
+	);
+}
+
+sub get_arrival {
+	my ( $result, $fmt ) = @_;
+
+	my $dt_arrival = $realtime ? $result->arrival : $result->sched_arrival;
+
+	if ($fmt) {
+		return $dt_arrival ? $dt_arrival->strftime($fmt) : q{};
+	}
+	return $dt_arrival;
+}
+
+sub get_departure {
+	my ( $result, $fmt ) = @_;
+
+	my $dt_dep = $realtime ? $result->departure : $result->sched_departure;
+
+	if ($fmt) {
+		return $dt_dep ? $dt_dep->strftime($fmt) : q{};
+	}
+	return $dt_dep;
+}
 
 sub get_station {
 	my ($input_name) = @_;
@@ -113,9 +148,9 @@ sub get_station {
 sub show_help {
 	my ($code) = @_;
 
-	print 'Usage: db-iris [-V] [-c <classlist>] [-d <date>] '
+	print 'Usage: db-iris [-r] [-c <classlist>] [-d <date>] '
 	  . '[-o <output-flags>] [-p <platforms>] [-t <time>] '
-	  . '[-T <typelist>] [-v <via>] <station>' . "\n"
+	  . '[-T <typelist>] [-v|-V <via>] <station>' . "\n"
 	  . "See also: man db-iris\n";
 
 	exit $code;
@@ -125,6 +160,20 @@ sub show_version {
 	say "db-iris version ${VERSION}";
 
 	exit 0;
+}
+
+sub sanitize_options {
+	if ( $track_via and $edata{times} ) {
+		say STDERR 'Note: --track-via cannot be combined with --output=times';
+		say STDERR 'Disabling option --output=times';
+		delete $edata{times};
+	}
+	if ( $realtime and $edata{times} ) {
+		say STDERR 'Note: --realtime cannot be combined with --output=times';
+		say STDERR 'Disabling option --realtime';
+		$realtime = 0;
+	}
+	return;
 }
 
 sub display_result {
@@ -151,8 +200,7 @@ sub display_result {
 		if (    $edata{delays}
 			and $d->delay_messages )
 		{
-			printf( '  %s',
-				join( q{  }, map { $_->[1] } ( reverse $d->delay_messages ) ) );
+			printf( '  %s', join( q{  }, map { $_->[1] } $d->delay_messages ) );
 		}
 		if (    $edata{delay}
 			and ( $d->delay or $d->is_cancelled )
@@ -161,8 +209,7 @@ sub display_result {
 			printf( '  %s', ( $d->delay_messages )[-1]->[1] );
 		}
 		if ( $edata{qos} and $d->qos_messages ) {
-			printf( '  %s',
-				join( q{  }, map { $_->[1] } ( reverse $d->qos_messages ) ) );
+			printf( '  %s', join( q{  }, map { $_->[1] } $d->qos_messages ) );
 		}
 		print "\n";
 
@@ -176,16 +223,15 @@ sub display_result {
 			else {
 				printf(
 					"%5s → %5s  %+d\n",
-					$d->arrival   ? $d->arrival->strftime('%H:%M')   : q{},
-					$d->departure ? $d->departure->strftime('%H:%M') : q{},
-					$d->delay,
+					get_arrival( $d, '%H:%M' ),
+					get_departure( $d, '%H:%M' ), $d->delay,
 				);
 			}
 
 		}
 
 		if ( $edata{messages} ) {
-			for my $message ( reverse $d->messages ) {
+			for my $message ( $d->messages ) {
 
 				# leading spaces to align with regular output
 				printf( " %s  %s\n",
@@ -207,6 +253,14 @@ if ( my $err = $status->errstr ) {
 	say STDERR "Request error: ${err}";
 	exit 2;
 }
+
+if ( $status_via and $status_via->errstr ) {
+	my $err = $status_via->errstr;
+	say STDERR "Request error: ${err}";
+	exit 2;
+}
+
+sanitize_options();
 
 for my $d ( $status->results() ) {
 
@@ -231,15 +285,35 @@ for my $d ( $status->results() ) {
 		$delay = ' CANCELED';
 	}
 
+	my $platformstr = $d->platform // q{};
 	my $timestr;
-	if ( $edata{times} ) {
+	if ($track_via) {
+		$timestr = get_departure( $d, '%H:%M' ) || get_arrival( $d, '%H:%M' );
+		if ( not $d->departure ) {
+			next;
+		}
+		my $d_via = first { $_->train_id eq $d->train_id } $status_via->results;
+		if (   not $d_via
+			or not $d_via->sched_arrival
+			or $d_via->sched_arrival < $d->departure )
+		{
+			next;
+		}
+		my $timestr_via = get_arrival( $d_via, '%H:%M' ) . $delay;
+		$timestr .= ' → ' . $timestr_via;
+		$platformstr = sprintf( '%2s → %2s', $d->platform // q{},
+			$d_via->platform // q{} );
+	}
+	elsif ( $edata{times} ) {
 		$timestr = sprintf( '%5s → %5s',
 			$d->sched_arrival   ? $d->sched_arrival->strftime('%H:%M')   : q{},
 			$d->sched_departure ? $d->sched_departure->strftime('%H:%M') : q{},
 		);
 	}
 	else {
-		$timestr = $d->time . $delay;
+		$timestr
+		  = ( get_departure( $d, '%H:%M' ) || get_arrival( $d, '%H:%M' ) )
+		  . $delay;
 	}
 
 	push(
@@ -247,7 +321,7 @@ for my $d ( $status->results() ) {
 		[
 			$timestr, $d->train,
 			$edata{route} ? join( q{  }, $d->route_interesting ) : q{},
-			$d->route_end, $d->platform, $d
+			$d->route_end, $platformstr // q{}, $d
 		]
 	);
 }
@@ -262,13 +336,13 @@ db-iris - Interface to the DeutscheBahn online departure monitor
 
 =head1 SYNOPSIS
 
-B<db-iris> [B<-V>] [B<-c> I<classlist>] [B<-d> I<date>] [B<-o> I<output-flags>]
-[B<-p> I<platforms>] [B<-t> I<time>] [B<-T> I<typelist>] [B<-v> I<via>]
+B<db-iris> [B<-r>] [B<-c> I<classlist>] [B<-d> I<date>] [B<-o> I<output-flags>]
+[B<-p> I<platforms>] [B<-t> I<time>] [B<-T> I<typelist>] [B<-v>|B<-V> I<via>]
 I<station>
 
 =head1 VERSION
 
-version 0.01
+version 0.02
 
 =head1 DESCRIPTION
 
@@ -355,6 +429,11 @@ Show both scheduled and expected arrival and departure times.
 Only show arrivals/departures at I<platforms> (comma-separated list, option may
 be repeated).
 
+=item B<-r>, B<--realtime>
+
+Show estimated instead of scheduled time where available. Cannot be combiled
+with C<< --output=times >>.
+
 =item B<-t>, B<--time> I<time>
 
 Request results for I<time> in HH:MM oder HH:MM:SS format. Note that only
@@ -389,9 +468,27 @@ system), "HKX" (private train not included in any DB tariffs) and
 
 =item B<-v>, B<--via> I<viastation>
 
-Only show trains serving I<viastation> after I<station>.
+Only show trains serving I<viastation> after I<station>. In this case,
+I<viastation> must match the station as contained in the train's route
+(see B<-of>), DS100 codes are not supported.
 
-=item B<-V>, B<--version>
+=item B<-V>, B<--track-via> I<viastation>
+
+Only show trains serving I<viastation> after I<station>. Show result
+timestamps as "HH:MM -> HH:MM +x", where the first time is the scheduled
+departure (without delay) at I<station> and the second the scheduled arrival
+(also withoyt delay) at I<viastation>. If a delay is known, it will be indicated
+by +x.
+
+Note that here, I<viastation> must be a regular station name or DS100 code.
+
+Caveat: Some trains change their identity along the route. For instance, the
+line RE11 line in NRW has two identifiers, one for ME<ouml>nchengladbach
+<-> Duisburg and one for Duisburg <-> Hamm. B<track-via> is not able to handle
+those and will miss trains changing their identifier between I<station> and
+I<viastation>
+
+=item B<--version>
 
 Show version information.
 
@@ -421,7 +518,7 @@ None.
 
 =head1 BUGS AND LIMITATIONS
 
-B<-oD> and B<-oq> contain duplicate entries.
+Unknown.
 
 =head1 AUTHOR
 
